implement get all users, update user